<resources>
    <string name="app_name">Anivarya Setu</string>

    <string name="status_code_sent">Code Sent</string>
    <string name="status_verification_succeeded">Verification succeeded</string>
    <string name="status_sign_in_failed">Sign-in failed</string>
    <string name="instant_validation">(instant validation)</string>
    <string name="network_error">Network Error</string>
    <string name="title_activity_consumer">ConsumerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_sign_out">Sign Out</string>

    <string name="menu_ngo">Seek Help</string>
    <string name="menu_shop">Get Meds</string>
    <string name="search">Search</string>

    <string name="internet_unavailable">Internet Not Available</string>
    <string name="invalid_address">Address Invalid</string>
    <string name="location_permission_msg">Please grant location permissions</string>
    <string name="address_input_msg">Please Input Address</string>
    <string name="unresolved_location_requirements">Location permissions not resolved</string>
    <string name="choose_location">Choose Location</string>
    <string name="current_location">Current Location</string>
    <string name="select_location">Select Location</string>
    <string name="text_refresh">Retry</string>
    <string name="oops_something_went_wrong">Oops! Something went wrong</string>
    <string name="upload_location_to_map">Upload Location to Map</string>
    <string name="address">Address</string>
    <string name="submit">Submit</string>
    <string name="request_submitted">Request Successfully submitted.</string>
    <string name="request_not_submitted">Request not submitted</string>
    <string name="location_not_selected">Please select a valid location</string>

    <string name="get_path">Get path</string>
    <string name="get_request">Get Request</string>
    <string name="get_route">Get Route</string>
    <string name="enter_food_packet_requirement">Enter Food Packet Requirement</string>
    <string name="navigate_to_shop">Navigate to Shop</string>
    <string name="refresh">Refresh</string>
    <string name="get_served_areas">Get Served Areas</string>
    <string name="availble_no_of_sanitizers">Number of Sanitizers available</string>
    <string name="availble_no_of_masks"> Number of Masks available</string>
    <string name="valid_sanitizers">Please enter valid number of sanitizers</string>
    <string name="valid_masks">Please enter valid number of masks</string>
    <string name="enter_packets">Please enter valid number of Packets</string>
</resources>
